--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "gulp": "^3.9.0",
+    "browser-sync": "^2.18.6",
+    "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.2",
     "gulp-jade": "^1.0.0",
     "gulp-less": "^3.0.0",
